--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@react-router/express": "^7.9.1",
     "@react-router/node": "^7.9.1",
+    "@tailwindcss/postcss": "^4.1.13",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "isbot": "^5.1.11",
     "morgan": "^1.10.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.9.1"
