--- a/package.json
+++ b/package.json
@@ -11,18 +11,32 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-router/express": "^7.9.1",
     "@react-router/node": "^7.9.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "isbot": "^5.1.11",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
+    "mongoose": "^8.18.1",
     "morgan": "^1.10.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.9.1"
+    "react-router": "^7.9.1",
+    "react-toast": "^1.0.3",
+    "tailwind-merge": "^3.3.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.1",
