--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-router/express": "^7.9.1",
     "@react-router/node": "^7.9.1",
     "@tailwindcss/postcss": "^4.1.13",
@@ -26,13 +29,16 @@
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "isbot": "^5.1.11",
+    "isomorphic-unfetch": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.0",
     "postcss": "^8.5.6",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-quilljs": "^2.0.5",
     "react-router": "^7.9.1",
     "react-toast": "^1.0.3",
     "tailwind-merge": "^3.3.1",
@@ -44,10 +50,13 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.0.0",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/validator": "^13.15.3",
     "tsx": "^4.19.3",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
