feat: card padding adjustment

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-quilljs": "^2.0.5",
     "react-router": "^7.9.1",
     "react-toast": "^1.0.3",
