--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/validator": "^13.15.3",
+    "baseline-browser-mapping": "^2.8.32",
     "tsx": "^4.19.3",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
