--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^5.2.1",
+    "framer-motion": "^12.23.26",
     "isbot": "^5.1.11",
     "isomorphic-unfetch": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
