--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
+    "moduleResolution": "bundler",
     "resolveJsonModule": true
   }
 }
